# convex_hull_filtering

./: .gitignore  CMakeLists.txt  README.md  filtered_convex_hulls.json  problem_analysis.ipynb  setup.py  test.py
include/convex_hull_filtering/: BoundingBox.hpp  Config.hpp  ConvexHull.hpp  Edge.hpp  Point.hpp  RTree.hpp  RTreeNode.hpp  Spliter.hpp
python/: convex_hull_filtering.cpp
src/: main.cpp
src/convex_hull_filtering/: BoundingBox.cpp  ConvexHull.cpp  Edge.cpp  Point.cpp  RTree.cpp  RTreeNode.cpp  Spliter.cpp
test/: BoundingBox_test.cpp  ConvexHull_test.cpp  Edge_test.cpp  main.cpp
